# news-briefing-generator

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini
briefings/: README.md
configs/: settings.example.yaml  workflow_configs.yaml
data/: README.md
docker/: Dockerfile
feeds/: README.md
src/news_briefing_generator/cli/: main.py
src/news_briefing_generator/clustering/: hdbscan.py
src/news_briefing_generator/config/: config_manager.py
src/news_briefing_generator/core/: context.py
src/news_briefing_generator/db/: helpers.py  schema.py  sqlite.py
src/news_briefing_generator/db/DDL/: briefing_topics.sql  briefings.sql  feeds.sql  topic_feeds.sql  topics.sql
src/news_briefing_generator/embedding/: huggingface.py
src/news_briefing_generator/llm/: base.py  ollama.py  openai.py
src/news_briefing_generator/logging/: manager.py
src/news_briefing_generator/model/: feed.py  topic.py
src/news_briefing_generator/model/task/: base.py  config.py  result.py
src/news_briefing_generator/preprocessing/: parsing.py
src/news_briefing_generator/prompt/: __init__.py
src/news_briefing_generator/prompt/preprocessing/: article_extraction.py
src/news_briefing_generator/prompt/summarization/: article.py  topic.py
src/news_briefing_generator/prompt/topics/: topic_selection.py  topic_titles.py
src/news_briefing_generator/tasks/: __init__.py  article_summarization.py  briefing_html_generation.py  content_fetching.py  feed_collection.py  feed_hdbscan_clustering.py  topic_selection.py  topic_summarization.py  topic_title_generation.py
src/news_briefing_generator/utils/: async_progress.py  database_ops.py  datetime_ops.py  opml_parser.py  path_utils.py  security.py  text_processing.py
src/news_briefing_generator/workflow/: workflow_handler.py
tests/: conftest.py
tests/integration/: test_parameter_resolution.py  test_workflow_execution.py
tests/unit/: test_config_manager.py
tests/unit/llm/: test_llm_providers.py
tests/unit/tasks/: test_topic_summarization.py
tests/unit/workflow/: test_workflow_handler.py
